# mctp-lib

./: CMakeLists.txt  LICENSE  README.md
include/mctp/binding/: serial.h
include/mctp/control/: constants.h  message.h  request.h  response.h  types.h
include/mctp/core/: base.h  binding.h  bus.h  mctp.h  medium_info.h  message_queue.h  message_queue_map.h  packet.h  packet_queue.h  packet_queue_map.h  queue_ctx_map.h
include/mctp/util/: alloc.h  avl_tree_decl.h  avl_tree_impl.h  container_of.h  crc16.h  decl_common.h  extern_c.h  queue_decl.h  queue_impl.h  typename.h
include/mctp/util/avl_map/: decl.h  impl.h
include/mctp/util/avl_tree/: decl.h  impl.h
include/mctp/util/queue/: decl.h  impl.h
mctp/: CMakeLists.txt
mctp/include/mctp/control/: message.h  response.h
mctp/include/mctp/core/: medium_info.h  transport.h
mctp/include/mctp/mctp/: base.h  control.h  host.h  transport.h
mctp/src/: mctp.c
src/: bus.c  control.c  core.c  crc16.c  main.c  message_queue.c  message_queue_map.c  packet.c  packet_queue.c  packet_queue_map.c  queue_ctx_map.c  serial.c
test/: CMakeLists.txt  dump.cpp  dump.hpp  import_catch2.cmake  main.c  main.cpp  serial_byte_rx_single_pkt.cpp
test/unit/: dump.cpp  dump.h
test/unit/core/: control-msg-tx.cpp  control-req-tx.cpp  core-control-req-tx.cpp  core-multi-pkt-tx.cpp  core-single-pkt-tx.cpp  raw-msg-tx.cpp
test/unit/serial/: serial-frame-rx.cpp  serial-pkt-tx.cpp  serial-rx-fsm.cpp  single-pkt-rx.cpp  test-common.h
